compiler/kernc_cli/tests/soundness/reject/specialization/erased_trait_object_does_not_infer_assoc_binding.rn
// stderr: cannot infer generic argument(s) `T` for function `take`

trait Base[N: usize] {
    type Out;
    fn make() Out;
};

struct X {};

impl &X: Base[4] {
    type Out = i64;

    fn make() Out {
        return 7;
    }
}

fn erase(value: &Base[4]) &Base[4] {
    return value;
}

fn take[T](value: &Base[4, Out = T]) T {
    return value.make();
}

fn main() i32 {
    let x = X.{};
    return (take(erase((x.& as &Base[4]))) as i32) - 7;
}
